# omni-stream

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dashboard  README.md
dashboard/: app.js  index.html  styles.css  telemetry_receiver.py
protos/: telemetry.proto
src/: main.cpp  network_client.hpp  sensor_generator.hpp  thread_safe_queue.hpp
